legend size and player format

--- a/songprofile/templates/index.html
+++ b/songprofile/templates/index.html
@@ -39,7 +39,7 @@
                 </div>
                 <h3 id="artist_label">Tune-Yards</h3>
 
-                <iframe id= 'player' src="https://open.spotify.com/embed?uri=spotify:track:1lm90gUqTlDNUAQT8pInFL" width="300" height="80" frameborder="0" allowtransparency="true"></iframe>
+                <iframe id="player" src="https://open.spotify.com/embed?uri=spotify:track:1lm90gUqTlDNUAQT8pInFL" width="300" height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
                 <div id="artist-img-div">
                     <img src="https://i.scdn.co/image/7f9e8950f7171b1ac27f4ca9b734f42dd9f243d9" class="artist-img">
                 </div>
